Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -118,12 +118,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "number_of_weeks = 5 # 5\n",
-    "n"
+    "number_of_weeks"
    ]
   },
   {
